# PRML-Final

./: .gitignore  README.md  download_hf_imagenet.py  finetune.py  imagenet_downloader.py  pretrain.py  pyproject.toml  requirements.txt  test_wandb.py  train.py
dataloader/: cifar_dataloader.py  dataloader.py  imagenet_dataloader.py
debug_utils/: create_dummy_checkpoint.py
experiment/: AdaBoost.md
experiment/ViT/: ViT.md  train_loss.csv  val_acc.csv  val_loss.csv
experiment/ViT/ViT-11M/: learning_rate.csv  (+3 more)
experiment/boosting/: CNN.csv  Linear.csv  NN.csv
experiment/logistic/: test_acc.csv  test_loss.csv  train_acc.csv  train_loss.csv
experiment/resnet/: ResNet.md
models/: __init__.py  boosting.py  logistic.py  resnet.py  vit.py
scripts/: debug_finetune_vit_cifar.sh  debug_pretrain_vit_imagenet.sh  finetune_vit_cifar.sh  pretrain_vit_imagenet.sh  train_cnn.sh  train_logistic.sh  train_resnet.sh  train_vit_cifar.sh
utils/: arg_util.py  debug_data_util.py  scheduler.py  visual_boost.py  visual_logistic.py  wandb_utils.py
wandb/: latest-run
wandb/run-20250607_161602-87530735/: run-87530735.wandb
wandb/run-20250607_162328-87530735/: run-87530735.wandb
wandb/run-20250607_163843-47155555/: run-47155555.wandb
wandb/run-20250607_165040-88440859/: run-88440859.wandb
wandb/run-20250607_173047-88440859/: run-88440859.wandb
wandb/run-20250607_173141-47557783/: run-47557783.wandb
wandb/run-20250607_193506-91931365/: run-91931365.wandb
wandb/run-20250607_200257-91931365/: run-91931365.wandb
wandb/run-20250607_200359-2459565/: run-2459565.wandb
(+145 files in other folders)
