[project]
name = "prml-final"
version = "0.1.0"
description = "PRML Final Homework (25 Spring) by transfAmer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "typed-argument-parser>=1.10.1",
    "wandb>=0.19.11",
]
